refactor:URETEK-72-Merge Customer entity into Lead.